@startuml
skinparam classAttributeIconSize 0

title Strategy - Search

class SearchContext {
  -strategy: SearchStrategy
  +setStrategy(strategy)
  +execute(books, keyword): Book[]
}

interface SearchStrategy {
  +search(books, keyword): Book[]
}

class SearchByTitle
class SearchByAuthor
class SearchByGenre

SearchContext --> SearchStrategy
SearchStrategy <|.. SearchByTitle
SearchStrategy <|.. SearchByAuthor
SearchStrategy <|.. SearchByGenre

@enduml
